# whisper.cpp

./: CMakeLists.txt  Makefile
examples/: CMakeLists.txt
examples/rasa/: CMakeLists.txt  README.md  rasa.cpp
stt-engine/: .gitignore  CMakeLists.txt  README.md  conv_agent_input_service.proto  grpc-code-generator-cpp  start.sh  stt-engine.cpp
stt-engine/conv-agent/: conv-agent-client.cpp  conv-agent-client.h
stt-engine/conv-agent/protos/action-server-api/kuka/action_server/: action_server_input_service.proto
stt-engine/conv-agent/protos/conv-agent-api/kuka/conv_agent/: conv_agent_input_service.proto
